Add same structure from home page to other pages

--- a/code/mostwanted.html
+++ b/code/mostwanted.html
@@ -40,7 +40,7 @@
                   <a aria-current="page" href="index.html" title="Home">Home</a>
                 </li>
                 <li>
-                  <a class="active" href="./tips.html" title="Tips">Tips</a>
+                  <a href="./tips.html" title="Tips">Tips</a>
                 </li>
                 <li>
                   <a href="quotes.html" title="Quotes & Memes"
@@ -48,7 +48,9 @@
                   >
                 </li>
                 <li>
-                  <a href="mostwanted.html" title="Most Wanted">Most Wanted</a>
+                  <a class="active" href="mostwanted.html" title="Most Wanted"
+                    >Most Wanted</a
+                  >
                 </li>
               </ul>
             </div>
@@ -56,6 +58,7 @@
         </div>
       </nav>
     </header>
+
     <section class="logo-magazine">
       <div class="kwadrat">
         <div class="trojkat">
@@ -75,83 +78,81 @@
         <div class="grid-parent-big-news">
           <div class="grid-child-big-news paragraph-grid-item">
             <div class="big-news-paragraph">
-              <h2>Crazy for Catnip</h2>
-              <h3>Why cats lose their minds over this perennial herb</h3>
+              <h2>The Latest Rage - Cat Yoga!</h2>
               <p>
-                So, what is catnip anyway? Catnip is one of the approximately
-                250 species in the mint family and has a leafy green appearance.
-                Nepetalactone, the essential oil in catnip, can turn even the
-                laziest couch potato into a crazy furball—if said furball
-                happens to have inherited the sensitivity to its effects. The
-                trait doesn't emerge until a cat is between three and six months
-                old; until then, a kitten will not have a response. Sensitivity
-                to this herb is hereditary—an estimated 50 percent of cats have
-                no reaction.
+                Cat Yoga is a calm and relaxing yin yoga class that suits
+                everyone. In the presence of our kitty cats, you get to land in
+                yourself. This class gives you the opportunity to feel the body,
+                let the mindrest and receive a recovery on a deep level. This is
+                more than ever in these times! Live cat yoga — participate from
+                the comfort of your own living room. After the success of cat
+                yoga in our cafe, we are now launching an exciting new product!
+                In order to welcome more participants, we will be broadcasting
+                live instructor-led yoga classes from our cat cafe every Monday
+                and Tuesday. You participate remotely via computer or mobile. If
+                you have a cat friend at home, they will participate based on
+                their desired interest.
               </p>
-              <h3>Smelling vs. Eating</h3>
               <p>
-                The most intense catnip experience starts with the nose—one
-                whiff of the stuff and your cat promptly goes nuts. Researchers
-                suspect that the herb targets feline "happy" receptors in the
-                brain. When eaten, however, it tends to have the opposite effect
-                and your cat mellows out. Most cats react to catnip by rolling,
-                flipping, rubbing, and eventually zoning out. They may meow or
-                growl at the same time. Other cats become hyperactive or
-                downright aggressive, especially if you approach them. Usually
-                these sessions last about 10 minutes, after which your cat loses
-                interest. It may take as long as two hours for him to "reset"
-                and become susceptible to it again. Be mindful of overindulgence
-                though—cats are unlikely to overdose on catnip, but they can get
-                sick if they eat too much. Trust your kitty to know when they've
-                had enough.
+                Book your place here on the website by selecting
+                <em>Online Cat Yoga</em>. We close registration 30 minutes
+                before the yoga class starts and you who registered will receive
+                an email with a link and password about 15 minutes before the
+                start. Dates for the class will be released later and we will
+                also eventually offer participants on site in the café. We look
+                forward to meeting you on the yoga mat!
               </p>
 
               <div class="primary-link">
                 <a
-                  href="https://www.humanesociety.org/resources/crazy-catnip"
+                  href="https://javawhiskers.se/en/cat-yoga/"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >Take Me to Humane Society</a
+                  >Book cat yoga at Java Whiskers</a
                 >
               </div>
             </div>
           </div>
           <div class="grid-child-big-news medium-grid-item">
-            <div class="video-big-news-div">
+            <div class="img-big-news-div">
               <figure>
-                <video
-                  controls
-                  class="video-big-news-one"
-                  alt="A cat smelling a tea bag wrapper and falling off the table"
-                >
-                  <source src="../video/catnip.mp4" type="video/mp4" />
-                </video>
+                <img
+                  src="../img/illustratedYogaCat.png"
+                  class="img-big-news-one"
+                  alt="An illustration of a cat sitting in the yoga lotus position"
+                />
                 <figcaption>
-                  <em>Video:</em><em> Smirre Archives</em>
+                  <em>Illustration:</em><em> Touch the Peacock</em>
+                  <div class="icon-div">
+                    <a
+                      href="https://www.instagram.com/touchthepeacock/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                      <span class="sr-only">Instagram</span>
+                    </a>
+                  </div>
                 </figcaption>
               </figure>
             </div>
           </div>
           <div class="grid-child-big-news medium-grid-item">
-            <div class="video-big-news-div">
+            <div class="img-big-news-div">
               <figure>
-                <video
-                  controls
-                  class="video-big-news-two"
-                  alt="A cat responding meow to the question: What are your thoughts about catnip"
-                >
-                  <source src="../video/interview.mp4" type="video/mp4" />
-                </video>
-                <figcaption class="video-big-news-two-figcaption">
-                  <em>Video:</em><em> Smirre Archives</em>
-                </figcaption>
+                <img
+                  src="../img/sunSalutatingCat.jpg"
+                  class="img-big-news-two"
+                  alt="A cat doing yoga indoors"
+                />
+                <figcaption><em>Photo:</em><em>Smirre Archives</em></figcaption>
               </figure>
             </div>
           </div>
         </div>
       </section>
       <section class="other-news">
-        <h3>Cats Try Out B&B:s</h3>
+        <h3>Smirre Works Out</h3>
         <!-- The other news  -->
         <!-- On desktop-sized screens: four cards in a row, 
          On tablets: two in a row, 
@@ -159,13 +160,16 @@
         <div class="grid-parent-other-news">
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Paperboard Box</h4>
+              <h4>Bouldering</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
                       <p class="review">
-                        <q>Loved the bed!</q>
+                        <q
+                          >Bouldering was so much fun, but at the same time,
+                          very scary!</q
+                        >
                       </p>
                       <div class="icon-div">
                         <i class="material-icons pets" aria-hidden="true"
@@ -187,7 +191,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb1.jpg"
+                        src="../img/climbingCat.jpg"
                         class="img-other-news-two"
                         alt="A cat climbing"
                       />
@@ -202,16 +206,28 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Carton Board Box</h4>
+              <h4>Outdoor Yoga</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
                       <div>
                         <p class="review">
-                          <q>Nope</q>
+                          <q>I absolutely adore outdoor yoga!</q>
                         </p>
                         <div class="icon-div">
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
                           <i class="material-icons pets" aria-hidden="true"
                             >pets</i
                           >
@@ -219,7 +235,7 @@
                       </div>
                       <figure>
                         <img
-                          src="../img/bb2.jpg"
+                          src="../img/outoodoorYogaCat.jpg"
                           class="img-other-news-one"
                           alt="A cat doing yoga outdoors"
                         />
@@ -235,15 +251,18 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Cardboard Box</h4>
+              <h4>Power Walkin'</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
                       <p class="review">
-                        <q>Ok, but not great</q>
+                        <q>Walking is nice, but no sweat!</q>
                       </p>
                       <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
                         <i class="material-icons pets" aria-hidden="true"
                           >pets</i
                         >
@@ -257,7 +276,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb3.jpg"
+                        src="../img/walkingCat.jpeg"
                         class="img-other-news-three"
                         alt="A cat walking"
                       />
@@ -272,122 +291,12 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Carton Board Bed</h4>
+              <h4>Abs Crunchin'</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
-                      <p class="review"><q>Meh</q></p>
-                      <div class="icon-div">
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                      </div>
-                    </div>
-                    <figure>
-                      <img
-                        src="../img/bb4.jpg"
-                        class="img-other-news-four"
-                        alt="A cat doing crunches"
-                      />
-                      <figcaption class="figcaption-other-news">
-                        <em>Photo:</em><em>Smirre Archives</em>
-                      </figcaption>
-                    </figure>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid-child-other-news paragraph-grid-item">
-            <div class="other-news-paragraph">
-              <h4>Paperboard Box</h4>
-              <div class="grid-child-other-news medium-grid-item">
-                <div class="other-news-div">
-                  <div class="card">
-                    <div>
-                      <p class="review">
-                        <q>Loved the bed!</q>
-                      </p>
-                      <div class="icon-div">
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                      </div>
-                    </div>
-                    <figure>
-                      <img
-                        src="../img/bb1.jpg"
-                        class="img-other-news-two"
-                        alt="A cat climbing"
-                      />
-                      <figcaption class="figcaption-other-news">
-                        <em>Photo:</em><em>Smirre Archives</em>
-                      </figcaption>
-                    </figure>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid-child-other-news paragraph-grid-item">
-            <div class="other-news-paragraph">
-              <h4>Carton Board Box</h4>
-              <div class="grid-child-other-news medium-grid-item">
-                <div class="other-news-div">
-                  <div class="card">
-                    <div>
-                      <div>
-                        <p class="review">
-                          <q>Nope</q>
-                        </p>
-                        <div class="icon-div">
-                          <i class="material-icons pets" aria-hidden="true"
-                            >pets</i
-                          >
-                        </div>
-                      </div>
-                      <figure>
-                        <img
-                          src="../img/bb2.jpg"
-                          class="img-other-news-one"
-                          alt="A cat doing yoga outdoors"
-                        />
-                        <figcaption class="figcaption-other-news">
-                          <em>Photo:</em><em>Smirre Archives</em>
-                        </figcaption>
-                      </figure>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid-child-other-news paragraph-grid-item">
-            <div class="other-news-paragraph">
-              <h4>Cardboard Box</h4>
-              <div class="grid-child-other-news medium-grid-item">
-                <div class="other-news-div">
-                  <div class="card">
-                    <div>
-                      <p class="review">
-                        <q>Ok, but not great</q>
-                      </p>
+                      <p class="review"><q>Omg, I hate crunches!</q></p>
                       <div class="icon-div">
                         <i class="material-icons pets" aria-hidden="true"
                           >pets</i
@@ -402,39 +311,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb3.jpg"
-                        class="img-other-news-three"
-                        alt="A cat walking"
-                      />
-                      <figcaption class="figcaption-other-news">
-                        <em>Photo:</em><em>Smirre Archives</em>
-                      </figcaption>
-                    </figure>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid-child-other-news paragraph-grid-item">
-            <div class="other-news-paragraph">
-              <h4>Carton Board Bed</h4>
-              <div class="grid-child-other-news medium-grid-item">
-                <div class="other-news-div">
-                  <div class="card">
-                    <div>
-                      <p class="review"><q>Meh</q></p>
-                      <div class="icon-div">
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                      </div>
-                    </div>
-                    <figure>
-                      <img
-                        src="../img/bb4.jpg"
+                        src="../img/crunchingCat.jpg"
                         class="img-other-news-four"
                         alt="A cat doing crunches"
                       />
