--- a/code/quotes.html
+++ b/code/quotes.html
@@ -48,7 +48,7 @@
                   >
                 </li>
                 <li>
-                  <a href="contact.html#contact" title="Contact">Contact</a>
+                  <a href="mostwanted.html" title="Most Wanted">Most Wanted</a>
                 </li>
               </ul>
             </div>
