Add cards row two

--- a/code/tips.html
+++ b/code/tips.html
@@ -151,7 +151,7 @@
         </div>
       </section>
       <section class="other-news">
-        <h3>Cats Try Out B&B:s</h3>
+        <h3>Cats Try Out Beds and B&B:s</h3>
         <!-- The other news  -->
         <!-- On desktop-sized screens: four cards in a row, 
          On tablets: two in a row, 
@@ -304,13 +304,13 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Paperboard Box</h4>
+              <h4>Blekinge</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
                       <p class="review">
-                        <q>Loved the bed!</q>
+                        <q>A room with a view!</q>
                       </p>
                       <div class="icon-div">
                         <i class="material-icons pets" aria-hidden="true"
@@ -332,7 +332,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb1.jpg"
+                        src="../img/bb5.jpg"
                         class="img-other-news-two"
                         alt="A cat climbing"
                       />
@@ -347,16 +347,22 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Carton Board Box</h4>
+              <h4>Umeå</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
                       <div>
                         <p class="review">
-                          <q>Nope</q>
+                          <q>We would have preferred separate beds</q>
                         </p>
                         <div class="icon-div">
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
                           <i class="material-icons pets" aria-hidden="true"
                             >pets</i
                           >
@@ -364,7 +370,7 @@
                       </div>
                       <figure>
                         <img
-                          src="../img/bb2.jpg"
+                          src="../img/bb6.jpg"
                           class="img-other-news-one"
                           alt="A cat doing yoga outdoors"
                         />
@@ -380,15 +386,21 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Cardboard Box</h4>
+              <h4>Malmö</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
                       <p class="review">
-                        <q>Ok, but not great</q>
+                        <q>Warm and cozy</q>
                       </p>
                       <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
                         <i class="material-icons pets" aria-hidden="true"
                           >pets</i
                         >
@@ -402,7 +414,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb3.jpg"
+                        src="../img/bb7.jpg"
                         class="img-other-news-three"
                         alt="A cat walking"
                       />
@@ -417,16 +429,13 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Carton Board Bed</h4>
+              <h4>Malmö Spa</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
-                      <p class="review"><q>Meh</q></p>
+                      <p class="review"><q>Why, just why?</q></p>
                       <div class="icon-div">
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
                         <i class="material-icons pets" aria-hidden="true"
                           >pets</i
                         >
@@ -434,7 +443,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb4.jpg"
+                        src="../img/bb8.jpg"
                         class="img-other-news-four"
                         alt="A cat doing crunches"
                       />
